--- a/src/assets/scss/template-2/_welcome-info.scss
+++ b/src/assets/scss/template-2/_welcome-info.scss
@@ -1,6 +1,7 @@
 $primary-color:#ea667f;
 
-.welcome-template{
+table.welcome-template{
+    background:#808080;
 	background-image:url(http://i.imgur.com/aLbTyGs.png) !important;
 	background-repeat: no-repeat !important;
     background-size: cover !important;
